Force long words to break to prevent overflow text

--- a/src/scripts/modules/search/results/results.less
+++ b/src/scripts/modules/search/results/results.less
@@ -11,6 +11,10 @@
 
     .info {
       .make-xs-column(9);
+
+      tbody {
+        word-break: break-all;
+      }
     }
   }
 }
